Save GPS coords correctly
Now GPS data works for both loading and saving of an image